fix overflow

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,3 @@
-* {
-    /* this fixed svg overflow */
-    overflow-x: hidden;
-}
-
 /* hides the scrollbar */
 *::-webkit-scrollbar {
     width: 0px;
@@ -12,6 +7,7 @@
 body {
     font-family: Helvetica;
     background-color: #4a5742;
+    overflow-x: hidden;
 }
 
 h1,
